# yagno

./: .dockerignore  .env.docker.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  install.sh  main.py  pyproject.toml
prompts/: researcher.md
specs/: ethics_council.yaml  finance_mission.yaml  research_team_with_sandbox.yaml  simple_researcher.yaml
yagno/: __init__.py  cli.py  compiler.py  config.py  display.py  expressions.py  mission.py  registry.py  runtime.py
yagno/tools/: finance.py  web.py
